постипенно делаю шляпу